--- a/index.html
+++ b/index.html
@@ -88,10 +88,9 @@
 	  never know before. i could not imagine what my life would be like without you. i love
 	  being with you and spend my rest of my life with you. Everyday i wakeup and thanking god
           <br />
-	  I want to tell you that the love i have for you is undying. it is a love that is strong and 
-	  enduring.I truly feel blessed that you have vecome a part of my life and i can't wait for the
-	  day that we can join our lives together. i promise you i will always love you and always hold
-	  you in my heart. i will always be there for you when you need me, and i will always love you 
+	  I want to tell you that the love i have for you is undyingI truly feel blessed that you have 
+	  become a part of my life and i can't wait for the day that we can join our lives together. 
+	  i promise you i will always love you and always hold you in my heart. I will always love you 
 	  no matter what live brings us. You are my soulmate. 
           <br />
           Once again happy birthday. love you so so much <br />
