--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 	  I want to tell you that the love i have for you is undyingI truly feel blessed that you have 
 	  become a part of my life and i can't wait for the day that we can join our lives together. 
 	  i promise you i will always love you and always hold you in my heart. I will always love you 
-	  no matter what live brings us. You are my soulmate. 
+	  no matter what life brings us. You are my soulmate. 
           <br />
           Once again happy birthday. love you so so much <br />
           If You Accept
